# autofic-core

./: .env.example  .gitignore  MANIFEST.in  README.md  find_js_repos_and_run.py  llm_input.json  log_backup.json  pyproject.toml  requirements.txt  semgrep_result.json  test_clone.py
.github/workflows/: autofic_javascript.yml  check_approval.yml  dashboard.yml
C:\testfile/diff/: 011_core_appHandler.js  023_server.js  024_server.js  188_core_appHandler.js  218_core_appHandler.js  235_core_appHandler.js
C:\testfile/llm/: response_core_appHandler.js_11.md  response_core_appHandler.js_188.md  response_core_appHandler.js_218.md  response_core_appHandler.js_235.md  response_server.js_23.md  response_server.js_24.md
C:\testfile/result/: server.js
C:\testfile/result/core/: appHandler.js
C:\testfile/sast/: before.json
C:\testfile_AutoFiC/llm/: response_config_db.js.md  response_core_appHandler.js.md  response_models_index.js.md  response_server.js.md
C:\testfile_AutoFiC/parsed/: server.js
C:\testfile_AutoFiC/parsed/core/: appHandler.js
C:\testfile_AutoFiC/patch/: appHandler.diff  index.diff  server.diff
C:\testfile_AutoFiC/sast/: before.json  merged_snippets.json
artifacts/downloaded_repo/llm/: response_config_db.js.md  response_core_appHandler.js.md  response_core_appHandler.js_11.md  response_core_appHandler.js_188.md  response_core_appHandler.js_218.md  response_core_appHandler.js_235.md  response_models_index.js.md  response_server.js.md  response_server.js_23.md  response_server.js_23_2.md  response_server.js_23_3.md  response_server.js_23_4.md  response_server.js_23_5.md  response_server.js_23_6.md  response_server.js_24.md
artifacts/downloaded_repo/parsed/: server.js
artifacts/downloaded_repo/patch/: appHandler.diff  server.diff
artifacts/downloaded_repo/retry_diff/: appHandler.diff  db.diff  index.diff  server.diff
artifacts/downloaded_repo/sast/: before.json  merged_snippets.json
artifacts/downloaded_repo/snippets/: snippet_config_db.js.json  snippet_core_appHandler.js.json  snippet_models_index.js.json  snippet_server.js.json  snippet_src_lib_http_request.js.json
artifacts/llm/: response_000.md  response_001.md  response_002.md  response_003.md  response_004.md  response_005.md  response_006.md  response_007.md  response_008.md  response_009.md  response_010.md  response_core_appHandler.js_11.md  response_core_appHandler.js_188.md  response_core_appHandler.js_218.md  response_core_appHandler.js_235.md  response_server.js_23.md  response_server.js_23_2.md  response_server.js_23_3.md  response_server.js_23_4.md  response_server.js_23_5.md  response_server.js_23_6.md  response_server.js_24.md
artifacts/semgrep/: before.json
docs/: contribution_guide.md  dependendy_management.md  setup_guide.md
sast/: before.json
server/: server.py
src/: downloader.py  github_handler.py  llm_input.json  semgrep_result.json
src/autofic_core/: __init__.py  app.py  cli.py  cli_options.py  downloader.py  errors.py  github_handler.py  pipeline.py  sample_module.py  sast.py  semgrep_preprocessor.py  ui_utils.py
src/autofic_core/ci_cd_auto/: ci_automation.py
src/autofic_core/download/: downloader.py  github_file_collector.py  github_handler.py  github_repo_handler.py
src/autofic_core/llm/: llm_runner.py  prompt_generator.py  response_parser.py  retry_prompt_generator.py
src/autofic_core/log/: check_approval.py  log_generator.py  log_writer.py
src/autofic_core/pages/: index.html  log_to_dashboard.py  log_writer.py
src/autofic_core/patch/: apply_patch.py  (+4 more)
tests/: test_basic.py
(+20 files in other folders)
