[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autofic-core"
version = "0.1.0"
description = "A solution for remediating vulnerable source code using LLMs."
authors = [{name = "inyeongjang", email = "inyeongjang@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
    "rich>=13.3.1"
]

[project.scripts]
autofic-core = "autofic_core.cli:main"

[tool.setuptools]
packages = ["autofic_core"]
package-dir = {"" = "src"}
