[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autofic-core"
version = "0.1.0"
description = "A solution for remediating vulnerable source code using LLMs."
authors = [{name = "autofic", email = "autofic.whs@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
    "rich>=13.3.1",
    "openai>=1.0.0",
    "pyfiglet>=1.0.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["llm", "security", "autofix", "static analysis", "code remediation"]

[project.scripts]
autofic-core = "autofic_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["autofic_core"]

[tool.setuptools.packages.find]
where = ["src"]